k8s/overlays/local/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: botmother-engine
  namespace: botmother-engine
spec:
  rules:
    - host: botmother-engine.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: botmother-engine
                port:
                  name: webhook
